$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

December 7, 2010
----------------
#974840 by Michelle: Fixed CSS / HTML so topic header links aren't floating around messily.
#974840 by Michelle: Fiddled a bit more with the CSS.
#933862 by Michelle: Added new permission to view post edited message and excluded it from the NC cache.
#982604 by Michelle: Added core signatures to cache avoiding tokens. Impossible to do with SfF because it needs too much node info.

December 4, 2010
----------------
#982238 by Michelle: Forced 'New topic' to first in list of node creation links.
#982238 by Michelle: Added ability to get nodes allowed in a particular vocabulary and set up stub for per term.
#974840 by Michelle: Redid 'Post reply' link handling.
NOISSUE by Michelle: Created new theme function theme_advanced_forum_l() to centralize link printing and give themers more control.
NOISSUE by Michelle: Expanded statistics to show last 5 new users.
#868942 by Michelle: Fixed node links to only buttonize specific ones so it doesn't try to buttonize the tags.
NOISSUE by Michelle: Lots of cleanup, fixing, re-arranging, simplifying code.
#961050 by designerbrent: Made forum 'folder' CSS more specific to avoid themes overriding it.
#869006 by carlthuringer, Michelle: Changed @ to ! in topic navigation t() to avoid a second run through check_plain.
#829540 by Michelle: Added sanity check on teaser split removal to avoid edge case error.

December 2, 2010
----------------
#935322 by Michelle: Fixed node add links being relative.
#935322 by Michelle: Fixed unclosed 'a' causing wonkiness.
NOISSUE by Michelle: Fixed missing t() on View Forums tab.
#868942 by Michelle, WorldFallz: Added CSS for image-less button to boxy. More of an example than anything at this point as it's likely to be changed.
#868942 by Michelle: Removed all language dependent button images.